# documentation/swagger.json
@@ -49,7 +49,7 @@
        "application/json"
     ],
     "paths":{ 
-        "/contribution/validate": {
+        "/philhealth/contribution/validate": {
             "post":{
                 "tags":[
                     "philhealth"
@@ -81,30 +81,259 @@
                 "produces":[
                         "application/json"
                     ],
-                    "responses":{
-                        "200":{
-                            "schema":{
-                                "properties":{
-                                    "transactionNumber": {"example": "string" },
-                                    "referenceNumber": {"example": "string" },
-                                    "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
-                                }
+                "responses":{
+                    "200":{
+                        "schema":{
+                            "properties":{
+                                "transactionNumber": {"example": "string" },
+                                "referenceNumber": {"example": "string" },
+                                "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
                             }
-                        },
-                        "400":{
-                            "schema":{
-                                "$ref":"#/definitions/400"
-                            }
-                        },
-                        "500":{
-                            "schema":{
-                                "$ref":"#/definitions/500"
-                            }
+                        }
+                    },
+                    "400":{
+                        "schema":{
+                            "$ref":"#/definitions/400"
+                        }
+                    },
+                    "500":{
+                        "schema":{
+                            "$ref":"#/definitions/500"
                         }
                     }
                 }
             }
+        },
+        "/philhealth/contribution/process": {
+            "post":{
+                "tags":[
+                    "philhealth"
+                ],
+                "summary":"process transaction",
+                "parameters":[
+                    {
+                        "name":"data",
+                        "in":"body",
+                        "schema":{
+                            "required":["*"],
+                            "properties":{
+                                "memberId": {"type": "string", "example": "010501525338"},
+                                "lastName": {"type": "string", "example": "CRUZ"},
+                                "firstName": {"type": "string", "example": "JUAN"},
+                                "middleName": {"type": "string", "example": "DELA"},
+                                "birthDate": {"type": "string", "example": "1980-01-01"},
+                                "mobileNumber": {"type": "string", "example": ""},
+                                "emailAddress": {"type": "string", "example": "juan.delacruz@email.com"},
+                                "memberType": {"type": "number", "example": 0},
+                                "amount": {"type": "number", "example": 240.0},
+                                "startMonth": {"type": "number", "example": 2017},
+                                "startYear": {"type": "number", "example": 1},
+                                "agentRefNo": {"type": "string", "example": "A1234"}  
+                            }
+                        }
+                    }
+                ],
+                "produces":[
+                        "application/json"
+                    ],
+                "responses":{
+                    "200":{
+                        "schema":{
+                            "properties":{
+                                "transactionNumber": {"example": "string" },
+                                "referenceNumber": {"example": "string" },
+                                "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
+                            }
+                        }
+                    },
+                    "400":{
+                        "schema":{
+                            "$ref":"#/definitions/400"
+                        }
+                    },
+                    "500":{
+                        "schema":{
+                            "$ref":"#/definitions/500"
+                        }
+                    }
+                }
+            }
+        },
+        "/philhealth/contribution/inquiry": {
+            "post":{
+                "tags":[
+                    "philhealth"
+                ],
+                "summary":"inquiry transaction",
+                "parameters":[
+                    {
+                        "name":"data",
+                        "in":"body",
+                        "schema":{
+                            "required":["*"],
+                            "properties":{
+                                "transactionNumber": {"type": "string", "example": ""},
+                                "referenceNumber": {"type": "string", "example": ""},
+                                "agentRefNo": {"type": "string", "example": ""},
+                                "dateEntry": {"type": "string", "example": ""}  
+                            }
+                        }
+                    }
+                ],
+                "produces":[
+                        "application/json"
+                    ],
+                "responses":{
+                    "200":{
+                        "schema":{
+                            "properties":{
+                                "transactionNumber": {"example": "string" },
+                                "referenceNumber": {"example": "string" },
+                                "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
+                            }
+                        }
+                    },
+                    "400":{
+                        "schema":{
+                            "$ref":"#/definitions/400"
+                        }
+                    },
+                    "500":{
+                        "schema":{
+                            "$ref":"#/definitions/500"
+                        }
+                    }
+                }
+            }
+        },
+        "/philhealth/contribution/cancel": {
+            "post":{
+                "tags":[
+                    "philhealth"
+                ],
+                "summary":"cancel transaction",
+                "parameters":[
+                    {
+                        "name":"data",
+                        "in":"body",
+                        "schema":{
+                            "required":["*"],
+                            "properties":{
+                                "transactionNumber": {"type": "string", "example": ""},
+                                "referenceNumber": {"type": "string", "example": ""},
+                                "agentRefNo": {"type": "string", "example": ""} 
+                            }
+                        }
+                    }
+                ],
+                "produces":[
+                        "application/json"
+                    ],
+                "responses":{
+                    "200":{
+                        "schema":{
+                            "properties":{
+                                "transactionNumber": {"example": "string" },
+                                "referenceNumber": {"example": "string" },
+                                "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
+                            }
+                        }
+                    },
+                    "400":{
+                        "schema":{
+                            "$ref":"#/definitions/400"
+                        }
+                    },
+                    "500":{
+                        "schema":{
+                            "$ref":"#/definitions/500"
+                        }
+                    }
+                }
+            }
+        },
+        "/sss/contribution/validate": {
+            "post":{
+                "tags":[
+                    "SSS Payment"
+                ],
+                "summary":"Validate transaction",
+                "parameters":[
+                    {
+                        "name":"data",
+                        "in":"body",
+                        "schema":{
+                            "required":["*"],
+                            "properties":{
+                                "memberId": {"type": "string", "example": "010501525338"},
+                                "lastName": {"type": "string", "example": "CRUZ"},
+                                "firstName": {"type": "string", "example": "JUAN"},
+                                "middleName": {"type": "string", "example": "DELA"},
+                                "birthDate": {"type": "string", "example": "1980-01-01"},
+                                "mobileNumber": {"type": "string", "example": ""},
+                                "emailAddress": {"type": "string", "example": "juan.delacruz@email.com"},
+                                "memberType": {"type": "number", "example": 0},
+                                "amount": {"type": "number", "example": 240.0},
+                                "startMonth": {"type": "number", "example": 2017},
+                                "startYear": {"type": "number", "example": 1},
+                                "agentRefNo": {"type": "string", "example": "A1234"}  
+                            }
+                        }
+                    }
+                ],
+                "produces":[
+                        "application/json"
+                    ],
+                "responses":{
+                    "200":{
+                        "schema":{
+                            "properties":{
+                                "transactionNumber": {"example": "string" },
+                                "referenceNumber": {"example": "string" },
+                                "dateEntry": {"example": "yyyy-MM-ddTHH:mm:ss"}
+                            }
+                        }
+                    },
+                    "400":{
+                        "schema":{
+                            "$ref":"#/definitions/400"
+                        }
+                    },
+                    "500":{
+                        "schema":{
+                            "$ref":"#/definitions/500"
+                        }
+                    }
+                }
+            }
+        }
     },
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     "definitions":{
        "201": {
            "type": "object",
